[package]
name = "waveshareoled-provider-wit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "waveshareoled-provider"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
# We need wasmcloud-core due to `LinkDefinition` and use of WasmcloudEntity structs in the bindgen output.
# wasmcloud-(core|provider-sdk|provider-wit-bindgen) are all unreleased crates still
#
# (see: https://github.com/wasmCloud/wasmCloud/blob/main/crates/provider-wit-bindgen/src/lib.rs#L174C43-L174C43)
wasmcloud-core = { git = "https://github.com/wasmCloud/wasmCloud.git", rev = "v0.78.0-rc4" }
wasmcloud-provider-sdk = { git = "https://github.com/wasmCloud/wasmCloud.git", rev = "v0.78.0-rc4" }
wasmcloud-provider-wit-bindgen = { git = "https://github.com/wasmCloud/wasmCloud.git", rev = "v0.78.0-rc4" }
